_static/css/custom.css
@import url('https://fonts.googleapis.com/css?family=Montserrat');
/* Define N8 theme colours (and lighter versions) */
:root {
  --burnt-orange-color: #F95423;
  --deep-blue-color: #054C91;
  --cool-grey-10-color: #63666A;
  --cool-grey-6-color: #A7A8AA;
  --cool-grey-2-color: #D0D0CE;
  --cool-grey-2-lighter-color: #E1E1E0; /* equivalent of Cool grey 2 with alpha 0.5 */
  --cool-grey-2-lightest-color: #F1F1F0; /* equivalent of Cool grey 2 with alpha 0.3 */
  --burnt-orange-lightest-color: #FFF6F5; /* equivalent of burnt orange with alpha 0.05 */
}

body {
    font-family: "Montserrat", "Arial";
    color: var(--cool-grey-10-color);
}

h1, .h1, h2, .h2, h3, .h3 {
    color: var(--deep-blue-color);
}

a, a:hover, a:focus, .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus,
.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus, code {
    color: var(--burnt-orange-color);
}

.navbar-default .navbar-brand, .navbar-default .navbar-nav>li>a, .bs-sidenav .nav > li > a {
    color: var(--deep-blue-color);
}

.navbar-brand {
  height: 90px;
  font-size: 18px;
}

.navbar-brand img {
  padding-right: 15px;
}

.navbar-nav, .navbar-right {
  padding: 15px 0;
  font-size: 14px;
}

.navbar-right .form-control {
  padding: 5px;
}

.navbar-nav .globaltoc-container {
  display: none;
}

.navbar-default, .navbar-default
.navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus,
.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus,
.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
  background-color: var(--cool-grey-2-color);
}

.row {
  margin-top: 60px;
}

.bs-sidenav, pre {
  text-shadow: none;
  background-color: var(--cool-grey-2-lightest-color);
}

.bs-sidenav .nav > li > a:hover, .bs-sidenav .nav > li > a:focus {
    background-color: var(--cool-grey-2-lighter-color);
}

.form-control, input {
  border-top-color: var(--cool-grey-2-lighter-color);
  border-bottom-color: var(--cool-grey-2-lighter-color);
  border-left-color: var(--cool-grey-2-lighter-color);
  border-right-color: var(--cool-grey-2-lighter-color);
  border-radius: 4px;
  color: var(--cool-grey-10-color);
}

.form-control:focus {
  border-color: var(--cool-grey-6-color);
}

.btn-default {
    background-color: var(--cool-grey-10-color);
    border-color: var(--cool-grey-10-color);
}

.btn-default:hover {
    background-color: var(--cool-grey-6-color);
    border-color: var(--cool-grey-6-color);
}

pre {
  background-color: var(--cool-grey-2-lightest-color);
  border-color: var(--cool-grey-2-color);
}

code {
  background-color: var(--burnt-orange-lightest-color);
}

/* Previous and next links in sidebar are not inside a <ul> for some
   reason. This lets us identify them but could be a bit flaky. */
:not(ul) > li {
  list-style: none;
  display: inline-block;
  width: 49%;
  padding: 10px 10px;
  white-space: nowrap;
}

:not(ul) > li a {
  display: block;
}

:not(ul) > li a[title^=Next] {
  text-align: right;
}

.alert-info {
    background-color: var(--deep-blue-color);
    border-color: var(--deep-blue-color);
}

/* Style versioning info and ads added by RTD */
.injected {
  position: relative;
  top: -30px;
  left: 50%;
  width: 50%;
  padding-right: calc(50vw - 580px);
  text-align: right;
}

.rst-current-version {
  cursor: pointer;
}

.rst-other-versions {
  display: none;
  position: absolute;
  background: white;
  border: 1px solid var(--cool-grey-2-lighter-color);
  border-radius: 4px;
  height: 310px;
  width: 300px;
  top: -320px;
  left: 275px;
  text-align: left;
  padding: 10px;
  font-size: small;
}

.rst-other-versions dl {
  margin-bottom: 0;
}

.rst-other-versions dd {
  display: inline-block;
  padding: 0 10px;
}

.rst-other-versions dt::after {
  content: ":"
}

.rst-other-versions dd:last-child::after {
  content: ""
}

.rst-other-versions hr {
  margin: 5px 0;
}

.ethical-sidebar, .ethical-footer {
  background-color: var(--cool-grey-2-lightest-color);
  border: none;
}

/* Change Autocomplete styles in Chrome*/
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  border: 1px solid var(--cool-grey-2-lighter-color);
  -webkit-text-fill-color: var(--cool-grey-10-color);
  -webkit-box-shadow: 0 0 0 30px white inset !important;
  font-family: "Montserrat", "Arial" !important;
  background-color: #FFFFFF;
}

/* Change width at which menus collapse */
@media (max-width: 1024px) {
  .navbar-header {
      float: none;
  }
  .navbar-left,.navbar-right {
      float: none !important;
  }
  .navbar-toggle {
      display: block;
  }
  .navbar-collapse {
      border-top: 1px solid transparent;
      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
  }
  .navbar-fixed-top {
      top: 0;
      border-width: 0 0 1px;
  }
  .navbar-collapse.collapse {
      display: none!important;
  }
  .navbar-nav {
      float: none!important;
      margin-top: 7.5px;
  }
  .navbar-nav>li {
      float: none;
  }
  .navbar-nav>li>a {
      padding-top: 10px;
      padding-bottom: 10px;
  }
  .collapse.in{
      display:block !important;
  }
  .form-group, .form-control {
      width: 100% !important;
  }
}

